--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
-
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark px-lg-5 py-3 mx-lg-5 justify-content-center">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav border-top border-bottom border-white">
+                  <a class="nav-link text-white px-3 py-3" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link text-white px-3 py-3" href="#about">About Us</a>
+                  <a class="nav-link text-white px-3 py-3" href="#menu">Menu List</a>
+                  <a class="nav-link text-white px-3 py-3" href="#team" tabindex="-1" aria-disabled="true">Team</a>
+                </div>
+              </div>
+            <a class="navbar-brand mx-5" href="#"><img src="./public/images/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+              <div class="navbar-nav border-top border-bottom border-white">
+                <a class="nav-link text-white px-3 py-3" href="#resa">Reservation<span class="sr-only">(current)</span></a>
+                <a class="nav-link text-white px-3 py-3" href="#blog">Blog</a>
+                <a class="nav-link text-white px-3 py-3" href="#testimonial">Testimonial</a>
+                <a class="nav-link text-white px-3 py-3" href="#contact" tabindex="-1" aria-disabled="true">Contact Us</a>
+              </div>
+            </div>
+          </nav>
+    </header>
   <!-- jquery  -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <!-- BOOTSTRAP -->
