--- a/index.html
+++ b/index.html
@@ -30,7 +30,42 @@
                 <a class="nav-link text-white px-3 py-3" href="#contact" tabindex="-1" aria-disabled="true">Contact Us</a>
               </div>
             </div>
-          </nav>
+        </nav>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators mb-auto align-items-center">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"><div class="innerIndic"></div></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"><div class="innerIndic"></div></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"><div class="innerIndic"></div></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active ">
+                <div class="inCarousel d-flex flex-column align-items-center justify-content-center mx-auto">
+                    <div class="text text-white">
+                        <h1>Whatever your <span>OCCASION, <em>TASTE</em> makes</span> it one <span>to remember!</span></h1>
+                    </div>
+                    <div class="boutons"><button class="btn btn-light rounded-pill rounded-pill mx-3 py-3 px-4">PURCHASE THEME</button><button class="btn btn-danger rounded-pill mx-3 py-3 px-4">LEARN MORE</button></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="inCarousel mx-auto d-flex flex-column align-items-center justify-content-center">
+                    <div class="text text-white">
+                        <h1>Whatever your <span>OCCASION, <em>TASTE</em> makes</span> it one <span>to remember!</span></h1>
+                    </div>
+                    <div class="boutons"><button class="btn btn-light rounded-pill rounded-pill mx-3 py-3 px-4">PURCHASE THEME</button><button class="btn btn-danger rounded-pill mx-3 py-3 px-4">LEARN MORE</button></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="inCarousel mx-auto d-flex flex-column align-items-center justify-content-center">
+                    <div class="text text-white">
+                        <h1>Whatever your <span>OCCASION, <em>TASTE</em> makes</span> it one <span>to remember!</span></h1>
+                    </div>
+                    <div class="boutons"><button class="btn btn-light rounded-pill rounded-pill mx-3 py-3 px-4">PURCHASE THEME</button><button class="btn btn-danger rounded-pill mx-3 py-3 px-4">LEARN MORE</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <div class="decoration">
+        </div>
     </header>
   <!-- jquery  -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
