--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
         <div class="decoration">
         </div>
     </header>
+    <section class="white1 py-lg-3 py-2">
+        <div class="white2corner bg-white border border-light">
+            <div class="about" id="about">
+                <div class="text d-flex flex-column align-items-center">
+                    <div class="title titlecorner d-flex justify-content-between">
+                        <div class="cornerTopLeft">
+                            <img src="./public/images/box-left-top.png" alt="">
+                        </div>
+                        <div class="our text-center py-lg-5 py-2">
+                            <h1 class="m-0"><span>OUR </span>Story</h1>
+                        </div>
+                        <div class="cornerTopRight">
+                            <img src="./public/images/box-right-top.png" alt="">
+                        </div>
+                    </div>
+                
+                    <div class="paragraph d-flex justify-content-center">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vero laborum quibusdam qui ipsam magni velit delectus nemo repudiandae facilis! Iste hic molestias minus quisquam nam. Animi rem veniam eveniet nam veritatis facilis neque quaerat dolorum, pariatur vitae ipsam, quis quibusdam non exercitationem id autem recusandae earum. Magni, a nesciunt?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="menu" id="menu">
+                <div class="our text-center py-lg-5 py-2">
+                    <h1 class="m-0"><span>OUR </span>Story</h1>
+                </div>
+               
+
+            </div>
+        </div>
+    </section>
   <!-- jquery  -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <!-- BOOTSTRAP -->
