--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="cornerTopLeft">
                             <img src="./public/images/box-left-top.png" alt="">
                         </div>
-                        <div class="our text-center py-lg-5 py-2">
+                        <div class="our text-center py-lg-5 py-2 mb-5">
                             <h1 class="m-0"><span>OUR </span>Story</h1>
                         </div>
                         <div class="cornerTopRight">
@@ -89,23 +89,126 @@
                 </div>
             </div>
             <div class="menu" id="menu">
-                <div class= "title">
-                <div class="our text-center py-lg-5 py-2">
-                    <h1 class="m-0"><span>OUR </span>Story</h1>
+                <div class= "title mb-5">
+                <div class="our text-center py-lg-5 py-2 mx-auto">
+                    <h1 class="m-0"><span>OUR </span>Menu List</h1>
                 </div>
                 </div>
-                <div class="row">
-                    <div class="col-2">
+                <div class="row px-4">
+                    <div class="col-2 col-md-3 mx-0 px-0">
                       <div class="list-group mx-1" id="list-tab" role="tablist">
-                        <a class="list-group-item list-group-item-action active border-top-0 border-left-0 border-right-0 border-bottom-1 border-secondary" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><span class="text-dark">Breakfast</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
-                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-secondary" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"><span class="text-dark">Lunch</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
-                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-secondary" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages"><span class="text-dark">Snacks</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
-                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-secondary" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"><span class="text-dark">Dinner</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
+                        <a class="list-group-item list-group-item-action active border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><span class="text-dark">Breakfast</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
+                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"><span class="text-dark">Lunch</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
+                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages"><span class="text-dark">Snacks</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
+                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"><span class="text-dark">Dinner</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
                       </div>
                     </div>
-                    <div class="col-10">
+                    <div class="col-10 col-md-9 border-left border-light mx-0">
                       <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
+                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                            <div class="row">
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 mb-3">
+                                    <div class="ticket py-3 d-flex justify-content-center">
+                                        <div class="image"><img src="./public/images/menu_image_1.jpg" alt="" width="100px" class=" rounded-circle"></div>
+                                        <div class="text my-auto mx-1">
+                                            <h5 class="text-dark">Deer Steak with potatoes</h5>
+                                            <p class="text-secondary">Welcome to Risotto restaurant website. Here we try to share our passion</p>
+                                        </div>
+                                        <div class="price my-auto mx-1 py-1 px-2 bg-light"><span class="text-danger">25€</span></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
                         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
