navflex1hoverANDordertoggle+sectionteam

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark px-lg-5 py-3 mx-lg-5 justify-content-center">
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                <div class="navbar-nav border-top border-bottom border-white">
+            <div class="collapse navbar-collapse justify-content-center order-1 order-lg-0" id="navbarNavAltMarkup">
+                <div class="navbar-nav border-top border-white border-bottom">
                   <a class="nav-link text-white px-3 py-3" href="#">Home <span class="sr-only">(current)</span></a>
                   <a class="nav-link text-white px-3 py-3" href="#about">About Us</a>
                   <a class="nav-link text-white px-3 py-3" href="#menu">Menu List</a>
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse justify-content-center order-2 order-lg-3" id="navbarNavAltMarkup">
               <div class="navbar-nav border-top border-bottom border-white">
                 <a class="nav-link text-white px-3 py-3" href="#resa">Reservation<span class="sr-only">(current)</span></a>
                 <a class="nav-link text-white px-3 py-3" href="#blog">Blog</a>
@@ -75,7 +75,7 @@
                         <div class="cornerTopLeft">
                             <img src="./public/images/box-left-top.png" alt="" class="img-fluid">
                         </div>
-                        <div class="our text-center py-lg-5 py-2 mb-5">
+                        <div class="our text-center py-lg-5 pb-2 pt-5 mb-5">
                             <h1 class="m-0"><span>OUR </span>Story</h1>
                         </div>
                         <div class="cornerTopRight">
@@ -90,7 +90,7 @@
             </div>
             <div class="menu" id="menu">
                 <div class= "title mb-5">
-                <div class="our text-center py-lg-5 py-2 mx-auto">
+                <div class="our text-center py-lg-5 pb-2 pt-5 mx-auto">
                     <h1 class="m-0"><span>OUR </span>Menu List</h1>
                 </div>
                 </div>
@@ -537,6 +537,39 @@
                 </div>
                 <div class="cornerTopRight d-flex">
                     <img src="./public/images/box-bottom_right.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="team" id="team">
+        <div class="d-flex justify-content-center">
+            <div class="our d-flex text-center py-lg-5 pb-2 pt-5 mb-5">
+                <h1 class="mx-auto my-0 text-white"><span>MEET </span>Our Chef</h1>
+            </div>
+        </div>
+        <div class="row mx-0 py-lg-4 py-2">
+            <div class="col-lg-3 col-md-6 col-12 d-flex">
+                <div class="chef m-auto">
+                    <div class="image"><img src="./public/images/chef1.png" alt="" class="img-fluid border-bottom border-light"></div>
+                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 d-flex">
+                <div class="chef m-auto">
+                    <div class="image"><img src="./public/images/chef2.png" alt="" class="img-fluid border-bottom border-light"></div>
+                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 d-flex">
+                <div class="chef m-auto">
+                    <div class="image"><img src="./public/images/chef3.png" alt="" class="img-fluid border-bottom border-light"></div>
+                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 d-flex">
+                <div class="chef m-auto">
+                    <div class="image"><img src="./public/images/chef4.png" alt="" class="img-fluid border-bottom border-light"></div>
+                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
                 </div>
             </div>
         </div>
