contact done footer&responsive left

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="list-group-item list-group-item-action active border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><span class="text-dark">Breakfast</span><i class="fas fa-mug-hot fa-4x mb-2"></i></a>
                         <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"><span class="text-dark">Lunch</span><i class="fas fa-utensils fa-4x mb-2"></i></a>
                         <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages"><span class="text-dark">Snacks</span><i class="fas fa-cheese fa-4x mb-2"></i></a>
-                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"><span class="text-dark">Dinner</span><i class="fas fa-fish fa-4x mb-2"></i></a>
+                        <a class="list-group-item list-group-item-action border-top-0 border-left-0 border-right-0 border-bottom-1 border-light px-0" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"><span class="text-dark">Dinner</span><i class="fas fa-concierge-bell fa-4x mb-2"></i></a>
                         </div>
                     </div>
                     <div class="col-10 col-md-9 border-left border-light mx-0">
@@ -724,7 +724,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonials pb-5" id="testimonials">
+    <section class="testimonials pb-5 d-flex flex-column align-items-center" id="testimonials">
         <div class="row">
             <div class="col-12 d-flex justify-content-center my-5">
                 <div class="our text-center text-white mb-5">
@@ -760,6 +760,31 @@
                 </div>
             </div>
         </div>
+    </div>
+    </section>
+    <section class="testimonials pb-5" id="contact">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center my-5">
+                <div class="our text-center mb-5">
+                    <h1 class="m-0"><span>OUR </span>Contact</h1>
+                </div>
+            </div>
+        </div>
+        <div class="container bg-danger py-5 px-3 d-flex flex-column align-items-center justify-content-center m-auto">
+            <div class="item1 text-white p-3 border-bottom border-white d-flex flex-column align-items-center w-100 text-center">
+                <i class="fas fa-map-marker-alt fa-2x"></i>
+                <span>10, Minoterie Square<br>Brussels</span>
+            </div>
+            <div class="item1 text-white p-3 border-bottom border-white d-flex flex-column align-items-center w-100 text-center">
+                <i class="fas fa-phone-alt fa-2x"></i>
+                <span>+91-1234567890</span>
+            </div>
+            <div class="item1 text-white p-3 d-flex flex-column align-items-center w-100 text-center">
+                <i class="fas fa-envelope fa-2x"></i>
+                <a href="mailto:emailthechef@taste.com" class="text-decoration-none text-white"><span>emailthechef@taste.com</span></a>
+            </div>
+        </div> 
+        
     </div>
     </section>
 
