--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                                     <input type="name" class="form-control"  placeholder="Maggie Smith" value="Enter Full Name" onfocus="if (this.value=='Enter Full Name') this.value='';"/>>
                                     </div>
                                     <div class="form-group col-md-6 col-12 px-3">
-                                        <input type="id" class="form-control" placeholder="id" value="Enter Id" onfocus="if (this.value=='Enter Id') this.value='';"/>>
+                                        <input type="id" class="form-control" placeholder="id" value="Enter Id" onfocus="if (this.value=='Enter Id') this.value='';"/>
                                     </div>
                                 </div>
                                 <div class="form-row">
