fin footer fin vdd maison

--- a/index.html
+++ b/index.html
@@ -787,6 +787,61 @@
         
     </div>
     </section>
+    <footer>
+        <div class="decoration">
+        </div>
+        <div class="row px-5 text-white">
+            <div class="col-md-4 col-12">
+                <div class="sous-col d-flex flex-column m-5">
+                    <h1 class="my-3">ABOUT US</h1>
+                    <div>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ea est maiores sed, voluptatibus totam qui cum aliquid provident accusantium veniam inventore natus distinctio laborum voluptates excepturi quas, sequi praesentium!</p>
+                        <div class="d-flex flex-wrap ">
+                            <a href="" class="text-white mr-3"><i class="fab fa-facebook-f fa-2x"></i></a>
+                            <a href="" class="text-white mx-3"><i class="fab fa-google-plus-g fa-2x"></i></a>
+                            <a href="" class="text-white mx-3"><i class="fab fa-pinterest-p fa-2x"></i></a>
+                            <a href="" class="text-white mx-3"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12">
+                <div class="sous-col d-flex flex-column my-5 mx-3">
+                    <h1 class="my-3">INSTAGRAM</h1>
+                    <div class="d-flex">
+                        <div class="images d-flex flex-wrap">
+                            <a href=""><img src="./public/images/instragram_gallery_img1.jpg" alt="" class="px-1 pb-3"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img2.jpg" alt="" class="px-1 pb-3"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img1.jpg" alt="" class="px-1 pb-3"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img2.jpg" alt="" class="px-1 pb-3"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img1.jpg" alt="" class="px-1 pb-2"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img2.jpg" alt="" class="px-1 pb-2"></a>
+                            <a href=""><img src="./public/images/instragram_gallery_img1.jpg" alt="" class="px-1 pb-2"></a>
+                            <a href="" class=""></a><img src="./public/images/instragram_gallery_img2.jpg" alt="" class="px-1 pb-2"></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12">
+                <div class="sous-col d-flex flex-column m-5">
+                    <h1 class="my-3">POPULAR TAGS</h1>
+                    <div class="d-flex flex-wrap">
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Restaurant</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Responsive Design</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Hotel</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Blog Section</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">SEO</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Cuisine</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Graphic</span>
+                        <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Food</span>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="bg-danger footer2"></div>
+    </footer>
 
   <!-- jquery  -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
