responsive basic done + animation start

--- a/index.html
+++ b/index.html
@@ -555,11 +555,26 @@
         </div>
         
         <div class="row m-0 mx-0 py-lg-4 py-2">
-            <div class="col-lg-3 col-md-6 col-12 mb-5 mb-lg-0 d-flex">
+            <div class="chefsuper col-lg-3 col-md-6 col-12 mb-5 mb-lg-0 d-flex">
                 <div class="chef m-auto">
-                    <div class="image"><img src="./public/images/chef1.png" alt="" class="img-fluid border-bottom border-light"></div>
-                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
+                    <div class="image"><img src="./public/images/chef1.png" alt="" class="img-fluid border-bottom border-light">
+                    <div class="animation w-100 bg-danger p-3 text-white d-flex flex-column align-items-center">
+                        <span class="font-weight-bold">
+                            Chef Toqué
+                        </span>
+                        <span>
+                            Continental Chef
+                        </span>
+                        <div class="w-100 d-flex justify-content-center border-top border-white mt-2 pt-3">
+                            <a href="" class="fab fa-facebook-f  mx-3 text-white"><i></i></a>
+                            <a href="" class="fab fa-google-plus-g  mx-3 text-white"><i></i></a>
+                            <a href="" class="fab fa-pinterest-p  mx-3 text-white"><i></i></a>
+                        </div>
+
+                    </div>
+                    </div>
                 </div>
+                <div class="text text-center text-white"><span>Chef Toqué</span></div>
             </div>
             <div class="col-lg-3 col-md-6 col-12 mb-5 mb-lg-0 d-flex">
                 <div class="chef m-auto">
@@ -726,6 +741,7 @@
             </div>
         </div>
     </section>
+   
     <section class="testimonials pb-5 d-flex flex-column align-items-center" id="testimonials">
         <div class="row m-0">
             <div class="col-12 d-flex justify-content-center my-5">
@@ -735,12 +751,12 @@
             </div>
         </div>
         <div class="row m-0 columns2 flex-column flex-lg-row">
-            <div class="col-lg-6 col-12 m-0 mb-">
+            <div class="col-lg-6 col-12 m-0 px-5 px-lg-auto mb-5">
                 <div class="sous-col d-flex flex-column flex-md-row justify-content-between text-white align-items-center">
-                    <div class="image mx-lg-4 mr-4">
+                    <div class="image mx-lg-4 mr--md4  mx-4 mb-3 mb-lg-0">
                         <img src="./public/images/testimonial1.jpg" alt="" class="">
                     </div>
-                    <div class="text border border-light rounded p-3">
+                    <div class="text border border-light rounded p-3 text-center text-md-left">
                         <h6 class="text-white">Loremp Ipsum</h6>
                         <span class="text-danger">Manager</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis nemo, iure recusandae culpa corrupti.</p>
@@ -748,12 +764,12 @@
                     
                 </div>
             </div>
-            <div class="col-lg-6 col-12 m-0 ">
+            <div class="col-lg-6 col-12 m-0 px-5 px-lg-auto ">
                 <div class="sous-col d-flex flex-column flex-md-row-reverse justify-content-between text-white align-items-center">
-                    <div class="image mx-lg-4 ml-4">
+                    <div class="image mx-lg-4 ml-md-4 mx-4  mb-3 mb-lg-0">
                         <img src="./public/images/testimonial1.jpg" alt="" class="">
                     </div>
-                    <div class="text border border-light rounded p-3">
+                    <div class="text border border-light rounded p-3 text-center text-md-right">
                         <h6 class="text-white">Loremp Ipsum</h6>
                         <span class="text-danger">Manager</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reiciendis nemo, iure recusandae culpa corrupti.</p>
@@ -792,17 +808,17 @@
     <footer>
         <div class="decoration">
         </div>
-        <div class="row m-0 px-5 text-white">
+        <div class="row m-0 px-lg-5 px-1 px-md-3 text-white flex-column flex-md-row">
             <div class="col-md-4 col-12">
-                <div class="sous-col d-flex flex-column m-5">
+                <div class="sous-col d-flex flex-column my-5 mx-3">
                     <h1 class="my-3">ABOUT US</h1>
                     <div>
                         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ea est maiores sed, voluptatibus totam qui cum aliquid provident accusantium veniam inventore natus distinctio laborum voluptates excepturi quas, sequi praesentium!</p>
-                        <div class="d-flex flex-wrap ">
-                            <a href="" class="text-white mr-3"><i class="fab fa-facebook-f fa-2x"></i></a>
-                            <a href="" class="text-white mx-3"><i class="fab fa-google-plus-g fa-2x"></i></a>
-                            <a href="" class="text-white mx-3"><i class="fab fa-pinterest-p fa-2x"></i></a>
-                            <a href="" class="text-white mx-3"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        <div class="d-flex flex-wrap">
+                            <a href="" class="text-white mr-3 mr-md-2 mr-md-2  mb-2"><i class="fab fa-facebook-f fa-2x"></i></a>
+                            <a href="" class="text-white mx-3 mx-md-2 mx-md-2 mb-2"><i class="fab fa-google-plus-g fa-2x"></i></a>
+                            <a href="" class="text-white mx-3 mx-md-2 mx-md-2 mb-2"><i class="fab fa-pinterest-p fa-2x"></i></a>
+                            <a href="" class="text-white mx-3 mx-md-2 mx-md-2 mb-2"><i class="fab fa-linkedin-in fa-2x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -826,7 +842,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-12">
-                <div class="sous-col d-flex flex-column m-5">
+                <div class="sous-col d-flex flex-column my-5 mx-3">
                     <h1 class="my-3">POPULAR TAGS</h1>
                     <div class="d-flex flex-wrap">
                         <span class="bg-danger mb-2 mr-2 py-2 px-3 badge rounded-pill border ">Restaurant</span>
