--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         
         <div class="row m-0 mx-0 py-lg-4 py-2">
             <div class="chefsuper col-lg-3 col-md-6 col-12 mb-5 mb-lg-0 d-flex">
-                <div class="chef m-auto">
+                <div class="chef m-auto text-center">
                     <div class="image"><img src="./public/images/chef1.png" alt="" class="img-fluid border-bottom border-light">
                     <div class="animation w-100 bg-danger p-3 text-white d-flex flex-column align-items-center">
                         <span class="font-weight-bold">
@@ -573,8 +573,9 @@
 
                     </div>
                     </div>
+                    <div class="text text-center text-white"><span>Chef Toqué</span></div>
                 </div>
-                <div class="text text-center text-white"><span>Chef Toqué</span></div>
+               
             </div>
             <div class="col-lg-3 col-md-6 col-12 mb-5 mb-lg-0 d-flex">
                 <div class="chef m-auto">
