--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 
-                    <div class="paragraph d-flex justify-content-center my-5">
+                    <div class="paragraph d-flex justify-content-center my-5 text-justify text-lg-center">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vero laborum quibusdam qui ipsam magni velit delectus nemo repudiandae facilis! Iste hic molestias minus quisquam nam. Animi rem veniam eveniet nam veritatis facilis neque quaerat dolorum, pariatur vitae ipsam, quis quibusdam non exercitationem id autem recusandae earum. Magni, a nesciunt?</p>
                     </div>
                 </div>
@@ -96,6 +96,8 @@
                     <a href="#" class="text-dark"><h1 class="m-0"><span>OUR </span>Menu List</h1></a>
                 </div>
                 </div>
+
+                
                 <div class="row m-0 px-4 px-4">
                     <div class="col-12 col-md-3 mx-0 px-0">
                       <div class="list-group mx-1" id="list-tab" role="tablist">
